--- a/src/.htaccess
+++ b/src/.htaccess
@@ -1,4 +1,4 @@
-<Files ~ "(\.(php|conf|inc|sql|tmpl)|Entries|Repositories|Root)$">
+<Files ~ "(\.(php|conf|inc|sql)|Entries|Repositories|Root)$">
   deny from all
 </Files>
 
