Major code changes in database access.  We now use wrappers (in src/includes/database* for our database access, rather than using the PEAR db support.  The PEAR support was a little unwieldly, requiring a global $DB handle to be passed around.
The src/includes/database* code is borrowed from Drupal (www.drupal.org).

--- a/src/leaguerunner.conf
+++ b/src/leaguerunner.conf
@@ -9,7 +9,7 @@
 
 ## Database configuration.  Format is
 ## 	database://username:password@hostname/database_name
-$DB_URL   = 'mysql://leaguerunner:password@localhost/leaguerunner';
+$DB_URL   = 'mysql://leaguerunner:ocuaweb@localhost/leaguerunner';
 
 ## Name of application  (deprecated, will be removed)
 $APP_NAME = "OCUA Leaguerunner";
