A very productive all-nighter of hacking.  The way handlers are loaded has been changed, and "clean url" support (similar to Drupal) is partially implemented. Most things will NOT WORK on HEAD until this is finished, though user accounts and most team functions are currently done.
This commit also fixes a number of small typos, SQL errors, etc that were found
along the way, and adds TODO comments for some areas that need fixing or
updating to the new way of doing things.  Some dead and/or deprecated code has
been removed as well.

--- a/src/.htaccess
+++ b/src/.htaccess
@@ -24,3 +24,19 @@ DirectoryIndex index.php
 	php_value session.cache_limiter   none
 	php_value allow_call_time_pass_reference  On
 </IfModule>
+
+# Various rewrite rules
+<IfModule mod_rewrite.c>
+  RewriteEngine on
+
+  # Modify the RewriteBase if you are using Leaguerunner in a subdirectory
+  # and the rewrite rules are not working properly.  Don't add a trailing
+  # slash.
+  #RewriteBase /leaguerunner
+
+  # Rewrite URLs to the form 'index.php?q=x':
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
+</IfModule>
+
