--- a/src/leaguerunner.conf
+++ b/src/leaguerunner.conf
@@ -11,6 +11,14 @@
 ## 	database://username:password@hostname/database_name
 $DB_URL   = 'mysql://leaguerunner:ocuaweb@localhost/leaguerunner';
 
+## Base URL.
+## This should be the directory containing Leaguerunner.  Don't 
+## add a trailing slash.
+$BASE_URL = 'http://localhost/leaguerunner';
+
+## Clean URL support
+$CLEAN_URLS = 1;
+
 ## Name of application  (deprecated, will be removed)
 $APP_NAME = "OCUA Leaguerunner";
 
