--- a/src/leaguerunner.conf
+++ b/src/leaguerunner.conf
@@ -14,6 +14,6 @@ $DB_URL   = 'mysql://leaguerunner:ocuaweb@localhost/leaguerunner';
 ## Base URL.
 ## This should be the directory containing Leaguerunner.  Don't 
 ## add a trailing slash.
-$BASE_URL = 'http://localhost/leaguerunner';
+$BASE_URL = '/leaguerunner';
 
 1;
