Clean up session initialization.
We now initialise the session stuff in index.php with an explicit call, rather
than it being done in the mainline of UserSession.php.  Also, the session
cookie name is now compatible with Drupal, so we can share cookies again.

This probably needs cleanup for portability :(

--- a/src/leaguerunner.conf
+++ b/src/leaguerunner.conf
@@ -16,4 +16,7 @@ $DB_URL   = 'mysql://leaguerunner:ocuaweb@localhost/leaguerunner';
 ## add a trailing slash.
 $BASE_URL = '/leaguerunner';
 
+## Session name. Set if necessary.
+$SESSION_NAME = 'www.ocua.ca';
+
 1;
