Fix line endings to be consistent.
The code had a mixture of Windows-style (\r\n) and UNIX-style (\n) linefeeds.
Now, they're all UNIX-style.

Please DO NOT CHANGE THIS when committing.  This source should be in UNIX line
ending format.  If your editor cannot handle this without mangling all of the
line endings on every commit, please get a new text editor.

--- a/src/leaguerunner.conf
+++ b/src/leaguerunner.conf
@@ -9,7 +9,7 @@
 
 ## Database configuration.  Format is
 ## 	database://username:password@hostname/database_name
-$DB_URL   = 'mysql://leaguerunner:ocuaweb@localhost/leaguerunner';
+$DB_URL   = 'mysql://ocua_4x:ocua_4x@localhost/leaguerunner';
 
 ## Base URL.
 ## This should be the directory containing Leaguerunner.  Don't 
