Added configuration for managing time zone differences between the league and the server.

--- a/src/leaguerunner.conf
+++ b/src/leaguerunner.conf
@@ -19,4 +19,11 @@ $BASE_URL = '/leaguerunner';
 ## Session name. Set if necessary.
 $SESSION_NAME = 'www.ocua.ca';
 
+## Set up time zone information.
+## See http://ca3.php.net/timezones for a list of valid timezone names
+$LOCAL_TZ = 'TZ=US/Eastern';
+## Difference, in minutes, from the local timezone to the server timezone.
+## Value is negative if server is to your west, positive if it's east.
+$TZ_ADJUST = 0;
+
 1;
