Move config to a .example file so local changes don't nag version-control

--- a/src/leaguerunner.conf.example
+++ b/src/leaguerunner.conf.example
@@ -1,5 +1,8 @@
 ## 
 ## Leaguerunner configuration file.
+## 
+## This is an example configuration file.  It should be copied to
+## leaguerunner.conf in the src/ directory and modified for your database.
 ##
 ## This file is parsed by both PHP and Perl, and so should contain ONLY lines
 ## of the format 
