Convert Leaguerunner to use PDO (PHP Data Objects).
This is a much nicer way of handling database abstraction in PHP,so it
now replaces our hand-rolled/borrowed-from-Drupal database.inc.

From the documentation:
	The PHP Data Objects (PDO) extension defines a lightweight,
	consistent interface for accessing databases in PHP.  Each
	database driver that implements the PDO interface can expose
	database-specific features as regular extension functions. Note
	that you cannot perform any database functions using the PDO
	extension by itself; you must use a database-specific PDO driver
	to access a database server.

	PDO provides a data-access abstraction layer, which means that,
	regardless of which database you're using, you use the same
	functions to issue queries and fetch data. PDO does not provide
	a database abstraction; it doesn't rewrite SQL or emulate
	missing features. You should use a full-blown abstraction layer
	if you need that facility.

	PDO ships with PHP 5.1, and is available as a PECL extension for
	PHP 5.0; PDO requires the new OO features in the core of PHP 5,
	and so will not run with earlier versions of PHP.

--- a/src/leaguerunner.conf.example
+++ b/src/leaguerunner.conf.example
@@ -10,9 +10,13 @@
 ## or Bad Things will happen.  More robust parsing may be added in the future,
 ## but don't hold your breath.
 
-## Database configuration.  Format is
-## 	database://username:password@hostname/database_name
-$DB_URL   = 'mysql://ocua_4x:ocua_4x@localhost/leaguerunner';
+## Database configuration.
+## DB_DSN should be a PDO-compatible DSN
+$DB_DSN   = 'mysql:host=localhost;dbname=leaguerunner';
+
+## DB_USER and DB_PASS are what you'd expect... the username and password
+$DB_USER  = 'leaguerunner';
+$DB_PASS  = 'password';
 
 ## Base URL.
 ## This should be the directory containing Leaguerunner.  Don't 
