Change some uses of BASE_URL to new FILE_URL, for sites where static resources reside at a different URL than dynamic resources.  These changes should be validated on a system with the traditional setup; they have only been used so far on a Post-Nuke system.

--- a/src/leaguerunner.conf.example
+++ b/src/leaguerunner.conf.example
@@ -22,6 +22,7 @@ $DB_PASS  = 'password';
 ## This should be the directory containing Leaguerunner.  Don't 
 ## add a trailing slash.
 $BASE_URL = '/leaguerunner';
+$FILE_URL = '/leaguerunner';
 
 ## Session name. Set if necessary.
 $SESSION_NAME = 'www.ocua.ca';
