--- a/src/.htaccess
+++ b/src/.htaccess
@@ -2,24 +2,28 @@
   deny from all
 </Files>
 
+<Files dummy.php>
+  allow from all
+</Files>
+
 <Files index.php>
   allow from all
 </Files>
 
-Options -Indexes
+Options FollowSymLinks -Indexes
 DirectoryIndex index.php
 
 # Various rewrite rules
 <IfModule mod_rewrite.c>
-  RewriteEngine on
+  #RewriteEngine on
 
   # Modify the RewriteBase appropriately if you are using Leaguerunner
   # somewhere other than http://your.hostname.tld/leaguerunner
-  RewriteBase /leaguerunner
+  #RewriteBase /
 
   # Rewrite URLs to the form 'index.php?q=x':
-  RewriteCond %{REQUEST_FILENAME} !-f
-  RewriteCond %{REQUEST_FILENAME} !-d
-  RewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
+  #RewriteCond %{REQUEST_FILENAME} !-f
+  #RewriteCond %{REQUEST_FILENAME} !-d
+  #sRewriteRule ^(.*)$ index.php?q=$1 [L,QSA]
 </IfModule>
 
